clio-17509 Update to thAlert to fix possible message overflow problems.

--- a/themis_components/thInput/index.scss
+++ b/themis_components/thInput/index.scss
@@ -1,10 +1,6 @@
 .th-input {
   outline: none;
-  -webkit-box-flex: 1;      // OLD - iOS 6-, Safari 3.1-6
-  -moz-box-flex: 1;         // OLD - Firefox 19-
-  -webkit-flex: 1;          // Chrome
-  -ms-flex: 1;              // IE 10
-  flex: 1;                  // NEW, Spec - Opera 12.1, Firefox 20+
+  flex: 1;
   width: 100%;
   font-size: 1.25rem;
   margin: 0;
@@ -39,11 +35,7 @@
 }
 
 .th-input-wrapper {
-  display: -webkit-box;      // OLD - iOS 6-, Safari 3.1-6
-  display: -moz-box;         // OLD - Firefox 19- (buggy but mostly works)
-  display: -ms-flexbox;      // TWEENER - IE 10
-  display: -webkit-flex;     // NEW - Chrome
-  display: flex;             // NEW, Spec - Opera 12.1, Firefox 20+
+  display: flex;
   position: relative;
   border-radius: 0.4rem;
   @include animated(100ms);
